Added support for the --translators argument to contain a ; delimited list of paths